components/apps/prometheus/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-prometheus-to-kubelet
  namespace: monitoring
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  egress:
  - to:
    - ipBlock:
        cidr: ${KUBE_MASTER_IP_CIDR:=10.0.0.0/8}
    - ipBlock:
        cidr: ${KUBE_WORKER_IP_CIDR:=10.0.0.0/8}
    ports:
    - protocol: TCP
      port: 10250
